# model

./: .gitignore  .tool-versions  Cargo.toml  README.md  credit_model.onnx  requirements.txt
src/: main.rs  model.py
synthetic_data/: credit_data.json
